syntax = "proto3";

package book_service;

option go_package = "./;book_service";

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
  bool isOrder = 4;
}

message GetBookRequest {
  int64 id = 1;
}

message UpdateBookRequest {
  bool isOrder = 1;
}

message GetBookByAuthor {
  string author = 1;
}

service BookService {
  rpc GetBook(GetBookRequest) returns (Book) {}
  rpc GetBooksByAuthor(GetBookByAuthor) returns (stream Book) {}
  rpc GetBooks(stream GetBookRequest) returns (stream Book) {}
  rpc Update(UpdateBookRequest) returns (Book) {}
}